[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/obstacles/laser/Laser.gd" type="Script" id=1]
[ext_resource path="res://src/obstacles/laser/assets/LAZERYENI5.png" type="Texture" id=2]
[ext_resource path="res://src/obstacles/laser/assets/LAZERYENI2.png" type="Texture" id=3]
[ext_resource path="res://src/obstacles/laser/assets/LAZERYENI3.png" type="Texture" id=4]
[ext_resource path="res://src/obstacles/laser/assets/LAZERYENI4.png" type="Texture" id=5]
[ext_resource path="res://src/obstacles/laser/assets/LAZERYENI1.png" type="Texture" id=6]
[ext_resource path="res://src/obstacles/laser/assets/LAZERYENI7.png" type="Texture" id=7]
[ext_resource path="res://src/obstacles/laser/assets/LAZERYENI9.png" type="Texture" id=8]
[ext_resource path="res://src/obstacles/laser/assets/LAZERYENI10.png" type="Texture" id=9]
[ext_resource path="res://src/obstacles/laser/assets/LAZERYENI8.png" type="Texture" id=10]
[ext_resource path="res://src/obstacles/laser/assets/LAZERYENI6.png" type="Texture" id=11]
[ext_resource path="res://assets/musics/laser.wav" type="AudioStream" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": false,
"name": "off",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 7 ) ],
"loop": true,
"name": "on",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 11 ) ],
"loop": false,
"name": "turnoff",
"speed": 10.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 6 ) ],
"loop": false,
"name": "turnon",
"speed": 10.0
} ]

[node name="Laser" type="Area2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "on"
frame = 1
playing = true

[node name="ActivationTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TurnOnTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="TurnOffTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Laser" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="CollisionRight" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -2, -62, 2, -62, 2, 0, -2, 0 )

[node name="CollisionLeft" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -2, 62, 2, 62, 2, 0, -2, 0 )
[connection signal="body_entered" from="." to="." method="_on_Laser_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="ActivationTimer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="Laser" to="." method="_on_Laser_finished"]
